--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
         "justreddit": "^3.0.3",
         "kato-pack": "^1.0.8",
         "knights-canvas": "^1.3.7-a",
-        "link-preview-js": "^2.1.13",
+        "link-preview-js": "*",
         "lodash": "^4.17.21",
         "lowdb": "^3.0.0",
         "mal-scraper": "^2.11.4",
